<resources>
    <string name="app_name">Narendra Modi</string>
    <string name="modi">Narendra Modi</string>
    <string name="share_app">Share App</string>

    <string name="about_us">News</string>
    <string name="about_us_text">Radha Soami Satsang Beas (RSSB) along with its international affiliates is a spiritual organization based on the teachings of all religions and dedicated to a process of inner development under the guidance of a spiritual teacher.In the Indian language, Radha Soami means ‘lord of the soul’, satsang describes a group that seeks truth, and Beas refers to the town near which the main centre is located in northern India. There are a number of other contemporary movements that use the name ‘Radha Soami’ but Radha Soami Satsang Beas is not associated with any of them. \n\n RSSB was established in India in 1891 and gradually began spreading to other countries. Today RSSB holds meetings in more than 90 countries worldwide. It is a non-profit organization with no affiliation to any political or commercial organizations.\nThe basis of every religion is spirituality. With the passage of time and changing social values, the basic spiritual teachings often become embellished with extra rules and rituals, and eventually take the shape of a formal religion. Despite its extensive outreach activities, RSSB tries to maintain the integrity of its spiritual core and preserve the simplicity of its teachings. At the heart of the RSSB teachings is a belief that there is a spiritual purpose to human life – to experience the divinity of God who resides in all of us. It is through this experience that we will realize the truth of the concept that there is only one God and we are all expressions of his love.\n\n Central to the RSSB teachings is a spiritual teacher who explains the purpose of life and guides and instructs members in a method of spirituality based on a daily meditation practice. The present teacher is Baba Gurinder Singh, who lives with his family at the main centre in northern India. By performing the meditation practice according to the teacher\'s instructions, individuals can realize the presence of God within themselves. It is a solitary practice that is done in the quiet of one\'s own home. Members commit themselves to a way of life that supports spiritual growth while carrying out their responsibilities to family, friends and society. There are no rituals, ceremonies, hierarchies or mandatory contributions, nor are there compulsory gatherings. Members need not give up their cultural identity or religious preference to follow this path.\n\nTo build on the primary spiritual practice of meditation, members are vegetarian, abstain from alcohol, tobacco, and recreational drugs, and are expected to lead a life of high moral values. A vegetarian diet encourages respect and empathy for all life and acknowledges that there is a debt to be paid for taking any life unnecessarily. Abstaining from intoxicants improves ones ability to concentrate and calms the mind during meditation. Members are encouraged to be self-supporting and not be a burden on society. They are free to make their own choices in life and maintain any cultural or religious affiliations they choose. RSSB does not involve itself in the personal lives of its members.\n\nInherent to the Society’s philosophy is the importance of seva, meaning selfless service, or voluntarism. Voluntary service is the backbone of all activities connected with RSSB. All administrative functions, construction of Indian and international centres, feeding of the hundreds of thousands of visitors who visit the headquarters in India, writing and translating books and magazines explaining the teachings, are done by members on a voluntary basis. Mahatma Gandhi embodied the importance of service in his statement: “The best way to find your self is to lose yourself in the service of others.” It is believed that through service, one loses one\’s sense of self-importance and becomes humble. That is the foundation of a spiritual life.</string>

    <string name="rate_us">Rate Us</string>
    <string name="overview">Breaking News</string>
    <string name="youtube">Youtube</string>
    <string name="bhajans">Website</string>
    <string name="education">Mann Ki Baat</string>
    <string name="photos">Photographs</string>
    <string name="download_link">https://play.google.com/store/apps/details?id=com.teamnamo</string>

    <string name="banner_ad">ca-app-pub-2450844335946572/5208344517</string>
    <string name="download">Download</string>

</resources>
