<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/modi"
    android:orientation="vertical"

    tools:context=".MainActivity">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DDF97D09"
        android:orientation="vertical"

        tools:context=".MainActivity">
    <TextView
        android:layout_marginTop="@dimen/dimen_12dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modi"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_about"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView

                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_news" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:text="@string/about_us"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_overview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView

                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_news_bk" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:text="@string/overview"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_youtube"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView

                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_youtube_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:text="@string/youtube"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_education"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView

                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_radio" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:text="@string/education"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_bhajan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView

                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_internet" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:text="@string/bhajans"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_photos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_photo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:text="@string/photos"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_share"

                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView

                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_share" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:text="@string/share_app"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_play"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_play"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_pause" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_rate"

                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView

                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_rating" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:text="@string/rate_us"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>